--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  background-image: url("https://www.kiteworks.com/wp-content/uploads/2021/09/How-to-Keep-Your-File-Sharing-CMMC-Compliant.webp");
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  width: 600px;
+  height: 300px;
+  margin: auto;
+  margin-top: 90px;
+  background: #f43d06;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: rgb(248, 236, 7) solid 5px;
+  border-radius: 20px;
+  opacity: 0.8;
 }
 
-.App-link {
-  color: #61dafb;
+.headerfor{
+  font-size: 40px;
+  font-weight: 500;
+  background: #453935;
+  color: #f4f805;
+  text-align: center;
+  opacity: 0.8;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+h1 {
+  font-size: 40px;
+  font-weight: 600;
+  background: #f43d06;
+  color: #0d05f8;
+  margin: 40px 0;
+}
+
+input {
+  margin: 20px 0;
+  width: 300px;
+  padding: 8px;
+  background: #f43d06;
+}
+
+p {
+  background: #f43d06;
+}
+
+a {
+  background: #f43d06;
+}
+
+
+button {
+  width: 150px;
+  height: 40px;
+  border-radius: 5px;
+  background: #c704fd;
+  border: 1px solid #0f0f10;
+  color: #fff9f9;
+  font-size: 20px;
+  margin: 30px 0;
+}
+
+
+
+@media screen and (max-width:740px) {
+  .wrapper {
+    max-width: 100%;
+    margin: auto;
+    margin-top: 100px;
+    grid-template-columns: 1fr;
   }
 }
