--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,64 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-image: url("https://www.kiteworks.com/wp-content/uploads/2021/09/How-to-Keep-Your-File-Sharing-CMMC-Compliant.webp");
-
 }
 
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  line-height: 1.4;
+  color: #444;
+  background: #fff;
+  height: 100vh;
+}
 
-
-.wrapper {
-  width: 600px;
-  height: 300px;
-  margin: auto;
-  margin-top: 90px;
-  background: #f43d06;
+.container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  border: rgb(248, 236, 7) solid 5px;
-  border-radius: 20px;
-  opacity: 0.8;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-.headerfor{
-  font-size: 40px;
-  font-weight: 500;
-  background: #453935;
-  color: #f4f805;
-  text-align: center;
-  opacity: 0.8;
+.inner {
+  width: 100%;
+  padding: 8rem 10px 4rem;
 }
 
-h1 {
-  font-size: 40px;
+.form-container {
+  width: 100%;
+  margin-bottom: 20px;
+  border-radius: calc(0.5 * 100px);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.38);
+  justify-content: space-evenly;
+}
+
+.input-text {
+  font-size: 1rem;
+  font-weight: 400;
+  width: 85%;
+  padding-right: 5px;
+  padding-left: 10px;
+  border-radius: calc(0.5 * 100px);
+}
+
+.input-text::placeholder {
+  color: #000;
+}
+
+.input-submit {
+  background: transparent;
+  color: #5b5b5b;
+  text-transform: capitalize;
+  cursor: pointer;
   font-weight: 600;
-  background: #f43d06;
-  color: #0d05f8;
-  margin: 40px 0;
+  margin-right: 10px;
 }
 
-input {
-  margin: 20px 0;
-  width: 300px;
-  padding: 8px;
-  background: #f43d06;
-}
-
-p {
-  background: #f43d06;
-}
-
-a {
-  background: #f43d06;
-}
-
-
-button {
-  width: 150px;
-  height: 40px;
-  border-radius: 5px;
-  background: #c704fd;
-  border: 1px solid #0f0f10;
-  color: #fff9f9;
-  font-size: 20px;
-  margin: 30px 0;
-}
-
-
-
-@media screen and (max-width:740px) {
-  .wrapper {
-    max-width: 100%;
-    margin: auto;
-    margin-top: 100px;
-    grid-template-columns: 1fr;
-  }
+.input-text,
+.input-submit {
+  height: 45px;
+  outline: none;
+  border: none;
 }
